# Topicos-3-Processamento-de-Imagem

./: README.md  reading.cpp
Borders and Convolution fucntions/: 12003 Roberts Gray.ppm  CMakeLists.txt
Borders and Convolution fucntions/diversos/: Image.cpp  Point.cpp  functions.cpp  functions.hpp
Borders and Convolution fucntions/diversos/point/: Point.hpp
Borders and Convolution fucntions/src/: Image.cpp  functions.cpp  main.cpp
Borders and Convolution functions/: 12003 Roberts RGB.ppm  12003_mahalonobis.ppm  12003_sobel RGB.ppm
Borders and Convolution functions/diversos/: Point.hpp  image.hpp  main.cpp  sobel_dy.txt
Borders and Convolution functions/diversos/point/: Point.cpp
Borders and Convolution functions/src/: Image.hpp  functions.hpp
Flood/: CMakeLists.txt  Lenna.ppm  main.cpp  segmentator.cpp  segmentator.hpp  test2jpg
Flood/src/: Flood.cpp  Flood.hpp  main.cpp
Read ppm and pgm/: reading.cpp
